[package]
name = "ripasso"
description = "A password manager that uses the file format of the standard unix password manager 'pass'"
repository = "https://github.com/cortex/ripasso/"
keywords = ["password-manager", "pass"]
version = "0.5.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com", "Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"
edition = '2018'

[dependencies]
glob = "0.3"
gpgme = "0.9"
chrono = "0.4"
git2 = "0.13"
rand = "0.7"
whoami = "0.9"
toml = "0.5"

[dependencies.config]
version = "0.10"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.1"
flate2 = "1.0"
tar = "0.4"
criterion = "0.3"

[workspace]

members = [
    "gtk", "qml", "cursive"
]

[[bench]]
name = "library_benchmark"
harness = false

